# miCPPgrad

./: .gitignore  CMakeLists.txt  README.md  graph.py  neural_network_3d_graph_demo.csv  run.sh
include/: neural_network.h  value.h
src/: main.cpp  neural_network.cpp  value.cpp
tests/: test_value.cpp
